duck/test/fail/datatype.duck
main = exit 0

data A x y of B x y z
